Fixed some layout bugs with a link colors not being active after click

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,6 +27,6 @@
 	}
 
 	a {
-		@apply hover:text-accent;
+		@apply hover:text-accent active:border-accent active:border-b;
 	}
 }
